Intermediate commit in Commission Conduction

--- a/CommissionsModule/Themes/Generic.xaml
+++ b/CommissionsModule/Themes/Generic.xaml
@@ -5,6 +5,7 @@
         <ResourceDictionary Source="../Views/Protocols/PreliminaryProtocolView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonductView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonclusionView.xaml" />
+        <ResourceDictionary Source="../Views/Protocols/CommissionMemberView.xaml" />
 
         <ResourceDictionary Source="pack://application:,,,/Shared.PatientRecords;component/Views/Diagnoses/MKBTreeView.xaml" />
     </ResourceDictionary.MergedDictionaries>    
