--- a/CommissionsModule/Themes/Generic.xaml
+++ b/CommissionsModule/Themes/Generic.xaml
@@ -1,30 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CommissionsModule.Views"
-                    xmlns:viewsCommon="clr-namespace:CommissionsModule.Views.Common"
-                    xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels"
-                    xmlns:viewModelsCommon="clr-namespace:CommissionsModule.ViewModels.Common">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Views/Decisions/CommissionDecisionView.xaml" />
-        <ResourceDictionary Source="../Views/Common/CommonView.xaml" />
-        <ResourceDictionary Source="../Views/Common/CreateTalonView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/PreliminaryProtocolView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonductView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonclusionView.xaml" />
 
         <ResourceDictionary Source="pack://application:,,,/Shared.PatientRecords;component/Views/Diagnoses/MKBTreeView.xaml" />
-    </ResourceDictionary.MergedDictionaries>
-
-    <DataTemplate DataType="{x:Type viewModels:CommissionDecisionEditorViewModel}">
-        <views:CommissionDecisionEditorView/>
-    </DataTemplate>
-
-    <DataTemplate DataType="{x:Type viewModelsCommon:PersonCommissionsViewModel}">
-        <viewsCommon:PersonCommissionsView/>
-    </DataTemplate>
-
-    <DataTemplate DataType="{x:Type viewModelsCommon:PersonTalonsViewModel}">
-        <viewsCommon:PersonTalonsView/>
-    </DataTemplate>
-
+    </ResourceDictionary.MergedDictionaries>    
 </ResourceDictionary>
