--- a/PatientInfoModule/Themes/Generic.xaml
+++ b/PatientInfoModule/Themes/Generic.xaml
@@ -1,8 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:views="clr-namespace:PatientInfoModule.Views"
+                    xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/Shared.Patient;Component/Views/PhotoView.xaml" />
         <ResourceDictionary Source="../Views/Documents/SelectPersonDocumentTypeView.xaml" />
         <ResourceDictionary Source="../Views/Contracts/AddContractRecordsView.xaml" />
+        <ResourceDictionary Source="../Views/TalonsCommissionsHospitalisations/CreateTalonView.xaml" />
     </ResourceDictionary.MergedDictionaries>
+
+    <DataTemplate DataType="{x:Type viewModels:PersonCommissionsCollectionViewModel}">
+        <views:PersonCommissionsCollectionView/>
+    </DataTemplate>
+
+    <DataTemplate DataType="{x:Type viewModels:PersonTalonsCollectionViewModel}">
+        <views:PersonTalonsCollectionView/>
+    </DataTemplate>
 </ResourceDictionary>
