--- a/PatientInfoModule/Views/TalonsCommissionsHospitalisations/PersonHospitalisationsView.xaml
+++ b/PatientInfoModule/Views/TalonsCommissionsHospitalisations/PersonHospitalisationsView.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl x:Class="CommissionsModule.Views.Common.PersonHospitalisationsView"
+﻿<UserControl x:Class="PatientInfoModule.Views.PersonHospitalisationsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="300">
-    <StackPanel Orientation="Vertical"
+    <StackPanel Orientation="Vertical" 
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center">
-        <TextBlock Text="?"
+        <TextBlock Text="?" 
                    FontSize="48"
                    HorizontalAlignment="Center"/>
-        <TextBlock Text="Госпитализации пациента" />
+        <TextBlock Text="Госпитализации отсутствуют" />
     </StackPanel>
 </UserControl>
