--- a/CommissionsModule/Views/Protocols/CommissionMemberView.xaml
+++ b/CommissionsModule/Views/Protocols/CommissionMemberView.xaml
@@ -1,14 +1,39 @@
 ﻿<ResourceDictionary x:Class="CommissionsModule.Views.CommissionMemberView"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels">
+                    xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels"
+                    xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                    xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions">
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <DataTemplate DataType="{x:Type viewModels:CommissionMemberViewModel}" >
-
-        <StackPanel Orientation="Vertical" Background="#FFBBCFBB">
-            <TextBlock Text="{Binding MemberTypeName}" FontStyle="Italic"/>
-            <TextBlock Text="{Binding StaffName}" FontWeight="Bold"/>
-            <TextBlock Text="{Binding PersonName}" FontWeight="Bold"/>
-        </StackPanel>
+        <!--<i:Interaction.Triggers>
+            <i:EventTrigger EventName="Mouse_Enter">
+                <i:InvokeCommandAction Command="{Binding ShowBtnsPanelCommand}" CommandParameter="True"/>
+            </i:EventTrigger>
+            <i:EventTrigger EventName="Mouse_Leave">
+                <i:InvokeCommandAction Command="{Binding ShowBtnsPanelCommand}" CommandParameter="False"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>-->
+        <Grid Background="#FFBBCFBB" HorizontalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Orientation="Vertical" >
+                <TextBlock Text="{Binding MemberTypeName}" FontStyle="Italic" Margin="2, 1, 2, 1"/>
+                <TextBlock Text="{Binding StaffName}" FontWeight="Bold" Margin="2, 1, 2, 1"/>
+                <TextBlock Text="{Binding PersonName}" FontWeight="Bold" Margin="2, 1, 2, 1"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding ShowBtnsPanel, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                <Button Background="Transparent" BorderThickness="0" VerticalAlignment="Center" Command="{Binding ElementName=AvailableMembersContainer, Path=DataContext.AddSelectedAvailableMemberCommand}" CommandParameter="{Binding}">
+                    <Button.ContentTemplate>
+                        <DataTemplate>
+                            <Image Source="pack://application:,,,/Core;Component/Resources/Images/arrowRight24x24.png"/>
+                        </DataTemplate>
+                    </Button.ContentTemplate>
+                </Button>
+            </StackPanel>
+        </Grid>
     </DataTemplate>
 </ResourceDictionary>
