Schema changed. Minor changes in person commission, talons.
Started work on editing commission members

--- a/CommissionsModule/Themes/Generic.xaml
+++ b/CommissionsModule/Themes/Generic.xaml
@@ -6,6 +6,7 @@
         <ResourceDictionary Source="../Views/Protocols/CommissionСonductView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonclusionView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionMemberView.xaml" />
+        <ResourceDictionary Source="../Views/Protocols/EditorCommissionMembersView.xaml" />
 
         <ResourceDictionary Source="pack://application:,,,/Shared.PatientRecords;component/Views/Diagnoses/MKBTreeView.xaml" />
     </ResourceDictionary.MergedDictionaries>    
