--- a/CommissionsModule/Views/Protocols/CommissionProtocolHeaderView.xaml
+++ b/CommissionsModule/Views/Protocols/CommissionProtocolHeaderView.xaml
@@ -13,7 +13,7 @@
     <fluent:RibbonGroupBox>
         <fluent:Button Header="Создать комиссию"
                        SizeDefinition="Large"
-                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/RelativesSearch48x48.png"
+                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/RelativesAdd48x48.png"
                        Command="{Binding CommissionProtocolViewModel.CreateCommissionCommand}" />
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Состояние комиссии">
@@ -28,7 +28,13 @@
                        SizeDefinition="Large"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/CommissionConclusion.png"
                        Command="{Binding CommissionProtocolViewModel.AddCommissionConclusionCommand}" CommandParameter="{Binding ElementName=btnCommissionConclusion, Path=IsChecked}"/>
-    </fluent:RibbonGroupBox>    
+    </fluent:RibbonGroupBox>
+    <fluent:RibbonGroupBox Header="Состав комиссии">
+        <fluent:Button Header="Редактировать"
+                       SizeDefinition="Large"
+                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Relatives48x48.png" 
+                       Command="{Binding CommissionProtocolViewModel.EditCommissionMembersCommand}"/>
+    </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox>
         <fluent:Button Header="Сохранить"
                        SizeDefinition="Large"
