--- a/PatientInfoModule/Views/TalonsCommissionsHospitalisations/PersonCommissionsCollectionView.xaml
+++ b/PatientInfoModule/Views/TalonsCommissionsHospitalisations/PersonCommissionsCollectionView.xaml
@@ -6,44 +6,50 @@
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="500">
-    <Grid>   
-        <StackPanel Orientation="Vertical">
-            <TextBlock Text="Комиссии пациента:" FontWeight="Medium" TextDecorations="Underline"/>
-            <ListBox BorderThickness="1" BorderBrush="Black" MinHeight="200"
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />            
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0" Text="Комиссии пациента:" FontWeight="Medium" TextDecorations="Underline" Margin="2"/>
+        <ListBox Grid.Row="1" BorderThickness="1" BorderBrush="Black" MinHeight="32"
                      HorizontalContentAlignment="Stretch" Margin="2"
                      ItemsSource="{Binding Commissions}"
                      SelectedItem="{Binding SelectedCommission}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Border Background="{Binding DecisionColorHex}" Margin="0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border Background="{Binding DecisionColorHex}" Margin="0">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
 
-                                <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center"
                                     Source="{Binding IsCompleted, Converter={x:Static converters:CommissionStatusToImageConverter.Instance}}"
                                     Width="32" Height="32" Stretch="Uniform" Margin="0,0,2,0"/>
-                                <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Text="{Binding ProtocolNumber}" Margin="0,0,5,0" FontWeight="Medium"/>
-                                    <TextBlock Text="{Binding DecisionText}" Margin="0" FontWeight="Medium"/>
-                                </StackPanel>
-                                <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
-                                    <TextBlock Text="{Binding MedHelpType}" Margin="0,0,5,0"/>
-                                    <TextBlock Text="{Binding MKB}" Margin="0,0,5,0"/>
-                                    <TextBlock Text="{Binding Talon}" Margin="0"/>
-                                </StackPanel>
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+                                <TextBlock Text="{Binding ProtocolNumber}" Margin="0,0,5,0" FontWeight="Medium"/>
+                                <TextBlock Text="{Binding DecisionText}" Margin="0" FontWeight="Medium"/>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
+                                <TextBlock Text="{Binding MedHelpType}" Margin="0,0,5,0"/>
+                                <TextBlock Text="{Binding MKB}" Margin="0,0,5,0"/>
+                                <TextBlock Text="{Binding Talon}" Margin="0"/>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </UserControl>
