--- a/PatientInfoModule/Views/TalonsCommissionsHospitalisations/PersonTalonsCommissionsHospitalisationsView.xaml
+++ b/PatientInfoModule/Views/TalonsCommissionsHospitalisations/PersonTalonsCommissionsHospitalisationsView.xaml
@@ -9,8 +9,8 @@
              d:DesignHeight="300" d:DesignWidth="600"
              d:DataContext="{d:DesignInstance viewModels:PersonTalonsCommissionsHospitalisationsViewModel}">
     <DockPanel LastChildFill="True">
-        <ContentControl Content="{Binding PersonTalonsVM}" DockPanel.Dock="Top" Margin="2 2 2 10"/>
-        <ContentControl Content="{Binding PersonCommissionsVM}" DockPanel.Dock="Top" Margin="2 0 2 10"/>
-        <views:PersonHospitalisationsView Margin="2 0 2 2"/>        
+        <ContentControl Content="{Binding PersonTalonsVM}" DockPanel.Dock="Top" Margin="2"/>        
+        <views:PersonHospitalisationsView DockPanel.Dock="Bottom" Margin="2"/>
+        <ContentControl Content="{Binding PersonCommissionsVM}" DockPanel.Dock="Top" Margin="2"/>
     </DockPanel>
 </UserControl>
